Adicionada URL para o repositorio

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-MiniCUnit
+MiniCUnit - https://github.com/Fredi/MiniCUnit
 Mini Biblioteca para desenvolvimento C focado em testes (TDD ou Test-Driven Development)
 
 Util para aulas de Algoritmos e Programação na Faculdade da FTEC
